crates/macro-tools/tests/ui/accessors/fail/enum.rs
use picea_macro_tools::Accessors;

#[derive(Accessors)]
enum Meta {
    Named { field: String },
}

fn main() {}
