crates/macro-tools/tests/ui/accessors/fail/enum.stderr
error: Accessors can only be derived for structs with named fields
 --> tests/ui/accessors/fail/enum.rs:4:6
  |
4 | enum Meta {
  |      ^^^^
